# KoPL

./: README.md  pyproject.toml
src/kopl/: __init__.py  data.py  kopl.py  util.py
src/kopl/test/: test_example.py
